<resources>
    <string name="app_name">MenuFoodApp</string>
    <string name="title_home">Perfil</string>
    <string name="title_dashboard">Menu Principal</string>
    <string name="title_notifications">Explorar</string>
    <string name="disfruta">Disfruta</string>
    <string name="todo">TODO</string>
    <string name="pizzaclasica">Pizza clasica</string>

    <!-- Activity Soporte -->
    <string name="soporte">Soporte</string>
    <string name="soporte1">¿Tienes alguna duda?</string>
    <string name="soporte2">¿Puedes borrar recetas?</string>
    <string name="soporte3">¿Cómo subo recetas?</string>
    <string name="soporte4">¿Algo no funciona?</string>
    <string name="soporte5">Ingredientes</string>
    <string name="soporte6">La App Falla</string>
    <string name="soporte7">Otro</string>

    <!-- Activity Registrar Receta -->
    <string name="receta">Nombre de la receta...</string>
    <string name="receta1">Dificultad</string>
    <string name="receta2">Ingredientes</string>
    <string name="receta3">Pasos...</string>
    <string name="receta4">Pasos:</string>
    <string name="receta5">Listo</string>
    <string name="receta6">Cancelar</string>

    <!-- Otros -->
    <string name="ingredientes">INGREDIENTES</string>
    <string name="dietas">DIETAS</string>
    <string name="mexicana">MEXICANA</string>
    <string name="aprende">APRENDE</string>
    <string name="lorem_Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">activity_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>