<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Soporte"
    android:orientation="vertical"
    android:background="@drawable/fondo_trabajo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
            android:layout_marginRight="@dimen/activity_horizontal_double_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soporte"
                android:textColor="@color/verde"
                android:textSize="18sp"
                android:fontFamily="@font/cocogoose_pro"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoose_pro"
                android:text="@string/soporte1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_double_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/round_background"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/soporte2"
                    android:textColor="@color/naranja"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/naranja"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/soporte3"
                    android:textColor="@color/naranja"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/naranja"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/soporte4"
                    android:textColor="@color/naranja"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/naranja"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/soporte5"
                    android:textColor="@color/naranja"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/naranja"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/soporte6"
                    android:textColor="@color/naranja"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/naranja"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/soporte7"
                    android:textColor="@color/naranja"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_double_margin"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/naranja"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>