<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.RegistrarReceta"
    android:orientation="vertical"
    android:background="@drawable/fondo_trabajo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imagenReceta"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/pizza_img"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/circular"/>

            <Spinner
                android:id="@+id/spinner"
                android:background="@drawable/round_corner_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_corner_button"
                />

            <EditText
                android:id="@+id/nombreReceta"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_background"
                android:hint="@string/receta"
                android:textColorHint="@color/naranja"
                android:textColor="@color/naranja"
                android:textSize="18sp"
                android:fontFamily="@font/cocogoose_pro"
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingLeft="@dimen/activity_horizontal_double_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_double_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_double_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_double_margin"
                android:textColor="@color/verde"
                android:textSize="23sp"
                android:fontFamily="@font/cocogoose_pro"
                android:text="@string/receta1"
                android:layout_gravity="center"/>

            <RatingBar
                android:id="@+id/dificultLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="3.5"
                android:progressBackgroundTint="@color/gris"
                android:progressTint="@color/naranja"
                android:secondaryProgressTint="@color/naranja"/>

            <Button
                android:id="@+id/btnIngredientes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_button"
                android:text="@string/receta2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/cocogoose_pro"
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_double_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_double_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin">


                <GridView
                    android:id="@+id/gridRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="8"
                    android:layout_marginRight="@dimen/activity_horizontal_double_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin">
                </GridView>

            </LinearLayout>

            <EditText
                android:id="@+id/pasosRecetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background"
                android:hint="@string/receta3"
                android:textColorHint="@color/naranja"
                android:textColor="@color/naranja"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_extrabold"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="7dp"
                android:paddingLeft="@dimen/activity_horizontal_double_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_double_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
                android:layout_marginBottom="@dimen/activity_vertical_double_margin"/>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnRegistrarReceta"
                    android:layout_width="115dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button"
                    android:text="@string/receta5"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_gravity="bottom|right"
                    android:paddingTop="3dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_double_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
                    android:layout_marginBottom="64dp"/>

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="115dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button"
                    android:text="@string/receta6"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/cocogoose_pro"
                    android:layout_gravity="bottom|left"
                    android:paddingTop="3dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_double_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
                    android:layout_marginBottom="64dp"/>
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>