<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_explorar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cocogoose_pro"
                android:text="Selecciona"
                android:textAlignment="center"
                android:textColor="@color/verde"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:background="@drawable/round_button" />


            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/pizza_img"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgIngredientes"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@color/teal_700"
                    android:alpha="0.5"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:text="@string/ingredientes"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/salad2_img"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgDietas"
                    android:layout_width="300dp"
                    android:layout_height="140dp"
                    android:background="@color/teal_700"
                    android:alpha="0.5"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:text="@string/dietas"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/chiken_img"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgMexicana"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@color/teal_700"
                    android:alpha="0.5"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:text="@string/mexicana"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_double_margin">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/pasta2_img"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgAprende"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@color/teal_700"
                    android:alpha="0.5"
                    app:shapeAppearanceOverlay="@style/circular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:text="@string/aprende"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>